--- a/Instructor/SOLUTION - From Distributions to Hypothesis .ipynb
+++ b/Instructor/SOLUTION - From Distributions to Hypothesis .ipynb
@@ -1835,7 +1835,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.10"
   },
   "toc": {
    "base_numbering": 1,
@@ -1854,6 +1854,13 @@
    },
    "toc_section_display": true,
    "toc_window_display": true
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
