--- a/ECG_PreClass - From Distributions to Hypothesis.ipynb
+++ b/ECG_PreClass - From Distributions to Hypothesis.ipynb
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 69,
    "id": "83c54108",
    "metadata": {},
    "outputs": [
@@ -1096,7 +1096,27 @@
     "sns.histplot(data = df, x = 'avg grade', stat = 'density', kde = True, cumulative = True)\n",
     "ax.set_title('Cumulative Distribution')\n",
     "plt.axvspan(90, 100, alpha = 0.4, color = 'orange', zorder = 1);\n",
+    "\n",
+    "# save the figure\n",
+    "plt.savefig('cumulative_distribution.png')\n",
+    "\n",
     "plt.show();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54fd3071-99cd-43c4-a70e-e53fc9e34dee",
+   "metadata": {},
+   "source": [
+    "Blue Steps (Bars): Each blue step represents all the students' grades up to that point. So, the first step includes grades from the start up to the first bar, the second step includes grades from the start up to the second bar, and so on.\r\n",
+    "\r\n",
+    "Getting to the Top (1.0 on the Chart): As you go from left to right, climbing each step, you're adding more students' grades. By the time you reach the last step on the right, you've counted all the students.\r\n",
+    "\r\n",
+    "Height of the Steps: The height of the steps tells you the proportion of all students you've counted up to that grade. If a step reaches halfway up the chart (0.5), it means you've counted about half of all the students when you reach that grade.\r\n",
+    "\r\n",
+    "Orange Step: There's one step colored in orange on the far right. This step is showing the grades that are at the very top. In school, this would be like looking at only the highest grades students got, like the A's.\r\n",
+    "\r\n",
+    "Understanding the Grades: If you're a teacher, this chart helps you see how the grades are spread out. For example, if most of the steps are low, it means many students got lower grades. If the steps get taller more quickly, it means a lot of students got grades in that range."
    ]
   },
   {
@@ -1219,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 67,
    "id": "c9f8f1b4",
    "metadata": {},
    "outputs": [
@@ -1237,7 +1257,19 @@
    "source": [
     "## visualize the histobram of Avg Grade again, but separate it by \"internet\"\n",
     "sns.histplot(data=df, x='avg grade', hue='internet',common_norm=False, \n",
-    "             stat='density',kde=True);"
+    "             stat='density',kde=True);\n",
+    "\n",
+    "# save the figure\n",
+    "plt.savefig('histogram_avg_grade_by_internet.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f13595c-f132-4052-b862-14be840ecb66",
+   "metadata": {},
+   "source": [
+    "**Interpretation:**\n",
+    "The visual suggests that having internet access might be associated with higher average grades since the orange bars and line representing those with internet appear more towards the right side of the chart (indicating higher grades) compared to those without internet access."
    ]
   },
   {
@@ -1570,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 68,
    "id": "e27ecef8",
    "metadata": {},
    "outputs": [
@@ -1601,7 +1633,22 @@
     "ax.set_title('Histogram with PDF and Interest Region')\n",
     "ax.legend()\n",
     "\n",
+    "# save the figure\n",
+    "plt.savefig('histogram_pdf_and_interest_region.png')\n",
+    "\n",
     "plt.show();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1c478e0-a757-4b5f-8f2e-594231de9681",
+   "metadata": {},
+   "source": [
+    "**Interpretation**\n",
+    "\n",
+    "Distribution: By comparing the bars with the PDF curve, you can assess how well the actual distribution of grades matches the assumed normal distribution. The histogram bars follow the trend of the PDF curve relatively closely, suggesting that the grades might be approximately normally distributed.\r\n",
+    "\n",
+    "e Interest Region: The highlighted interest region could be used to calculate the probability of a student scoring within this high-grade range. It looks like a smaller portion of the dataset falls into this range, indicating that these high grades are less common."
    ]
   },
   {
